--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       <!-- BALANCE -->
       <div class="balance">
         <div>
+          <img src="m111.png" alt="Logo" class="logo moo" />
           <p class="balance__label">Current balance</p>
           <p class="balance__date">
-            As of <span class="date">05/03/2037</span>
+            As of <span class="date">05/08/2023</span>
           </p>
         </div>
         <p class="balance__value">0000€</p>
@@ -50,6 +51,7 @@
 
       <!-- MOVEMENTS -->
       <div class="movements">
+       
         <div class="movements__row">
           <div class="movements__type movements__type--deposit">2 deposit</div>
           <div class="movements__date">3 days ago</div>
